--- a/index.html
+++ b/index.html
@@ -36,14 +36,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: HeroBiz
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/herobiz-bootstrap-business-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -54,8 +46,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.png" class="img-fluid" alt="">
-        <!-- <h1>HeroBiz<span>.</span></h1> -->
+        <img src="assets/img/logo-ct.png" class="img-fluid" alt="">
+        <h1><strong>CT Integradas RJ</strong></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -80,7 +72,7 @@
 
   <section id="hero-fullscreen" class="hero-fullscreen d-flex align-items-center">
     <div class="container text-center d-flex flex-column align-items-center position-relative" data-aos="zoom-out">
-      <img src="assets/img/logo.png" style="width: 20%" class="img-fluid" alt="">
+      <img src="assets/img/logo-ct.png" style="width: 20%" class="img-fluid" alt="">
       <h3><strong>CENTRO DE TRATAMENTO PARA DEPENDÊNCIA QUÍMICA INTEGRADAS</strong></h3>
       <p>Restaurando vidas desde 2008</p>
       <div class="d-flex">
@@ -547,13 +539,13 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Our Team</h2>
-          <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam voluptas asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p>
+          <h2>Equipe</h2>
+          <p>Nossa equipe é formada por profissionais com anos de experiência na área, contando as melhores metodologias da atualidade.</p>
         </div>
 
         <div class="row gy-5">
 
-          <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="200">
+          <div class="col-xl-6 col-md-6 col-sm-12 d-flex" data-aos="zoom-in" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
@@ -571,25 +563,7 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="400">
-            <div class="team-member">
-              <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="600">
+          <div class="col-xl-6 col-md-6 col-sm-12 d-flex" data-aos="zoom-in" data-aos-delay="600">
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
@@ -618,13 +592,13 @@
 
         <div class="section-header">
           <h2>Contato</h2>
-          <p>Ea vitae aspernatur deserunt voluptatem impedit deserunt magnam occaecati dssumenda quas ut ad dolores adipisci aliquam.</p>
+          <p>Está precisando de ajuda? Não exite em nos contatar.</p>
         </div>
 
       </div>
 
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d117598.23548679159!2d-45.50531030825556!3d-22.91540459891831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sEstrada%20Municipal%20Jos%C3%A9%20Teodoro%2C%20760%20-%20Cruz%20Pequena%2C%20Pindamonhangaba%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1696298369668!5m2!1spt-BR!2sbr" frameborder="0" allowfullscreen></iframe>
       </div><!-- End Google Maps -->
 
       <div class="container">
@@ -634,14 +608,15 @@
           <div class="col-lg-4">
 
             <div class="info">
-              <h3>Get in touch</h3>
-              <p>Et id eius voluptates atque nihil voluptatem enim in tempore minima sit ad mollitia commodi minus.</p>
+              <h3>Entrar em contato</h3>
+              <p>Envie-nos uma mensagem, que logo lhe responderemos.</p>
 
               <div class="info-item d-flex">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
-                  <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <h4>Localização:</h4>
+                  <p>Estrada Municipal José Teodoro, 760 - Cruz Pequena</p>
+                  <p>Pindamonhagaba - SP - 12400-000</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -649,15 +624,15 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h4>Email:</h4>
-                  <p>info@example.com</p>
+                  <p>ctpinda@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex">
                 <i class="bi bi-phone flex-shrink-0"></i>
                 <div>
-                  <h4>Call:</h4>
-                  <p>+1 5589 55488 55</p>
+                  <h4>Telefones:</h4>
+                  <p> (12) 3645-1311 / 3645-2265 / 3522-2922</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -684,9 +659,9 @@
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">Sua mensagem foi enviada. Obrigado!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Enviar mensagem</button></div>
             </form>
           </div><!-- End Contact Form -->
 
@@ -706,35 +681,34 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>HeroBiz</h3>
+              <h3>CT Integradas RJ</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                  Estrada Municipal José Teodoro, 760 - Cruz Pequena<br>
+                  Pindamonhagaba - SP - 12400-000<br><br>
+                <strong>Telefones:</strong> (12) 3645-1311 / 3645-2265 / 3522-2922<br>
+                <strong>Email:</strong> ctpinda@gmail.com<br>
               </p>
             </div>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Links úteis</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#home">Home</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#about">Sobre nós</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Serviços</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#portfolio">Portifólio</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#team">Equipe</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contato</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Serviços</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Adaptação e desintoxicação</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Conscientização</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Prevenção a recaída</a></li>
             </ul>
           </div>
 
@@ -756,14 +730,7 @@
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>HeroBiz</span></strong>. All Rights Reserved
-          </div>
-          <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            &copy; Copyright <strong><span>CT Integradas RJ</span></strong>. All Rights Reserved
           </div>
         </div>
 
@@ -771,15 +738,17 @@
           <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
           <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
 
       </div>
     </div>
 
   </footer><!-- End Footer -->
-
+  <!--Botão whatsapp-->
+  <a href="https://api.whatsapp.com/send?phone=5521993338842" target="_blank">
+      <div class="btn-whatsapp pulsaDelay"><i class="bi bi-whatsapp"></i></div>
+  </a>
+  <!--Botão whatsapp-->
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <div id="preloader"></div>
