--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
       <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo-ct.png" class="img-fluid" alt="">
-        <h1><strong>CT Integradas RJ</strong></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -322,6 +321,35 @@
       </div>
     </section><!-- End Services Section -->
 
+    <!-- ======= Features Section ======= -->
+    <section id="features" class="features">
+      <div class="container" data-aos="fade-up">
+        <div class="tab-content">
+          <div class="tab-pane active show" id="tab-1">
+            <div class="row gy-4">
+              <div class="col-lg-8 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
+                <h3>Remoção</h3>
+                <p class="fst-italic" align="justify">
+                  Possuímos um serviço especializado de intervenções psiquiátricas e para pacientes comprometidos com o uso abusivo de múltiplas drogas. Esta equipe conta com mais de 15 anos de experiência. Promovemos assim uma abordagem segura, humanizada, seguindo todos os critérios e exigências dos órgãos competentes como a Vigilância sanitária, o Conselho Federal de Medicina e o MP. Atendemos 24hs. Claro que atendemos emergências, mas buscamos sempre uma abordagem estratégica e com mais segurança para o paciente, familiares e equipe.
+                </p>
+                <ul>
+                  <li><i class="bi bi-check-circle-fill"></i> Plantão 24h</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Atendimento em todo o Brasil</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Melhor estratégia</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Orçamento imediato</li>
+                </ul>
+              </div>
+              <div class="col-lg-4 text-center d-flex flex-column order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
+                <img src="assets/img/ambulancia.jpeg" alt="" class="img-fluid rounded-3 w-75 m-2 mx-auto d-block">
+                <img src="assets/img/ambulancia-interno.jpeg" alt="" class="img-fluid rounded-3 w-75 m-2 mx-auto d-block">
+              </div>
+            </div>
+          </div><!-- End Tab Content 1 -->
+        </div>
+
+      </div>
+    </section><!-- End Features Section -->
+
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
       <div class="container" data-aos="fade-up">
@@ -416,10 +444,16 @@
       <div class="container-fluid" data-aos="fade-up" data-aos-delay="200">
 
         <div class="portfolio-isotope" data-portfolio-filter="*" data-portfolio-layout="masonry" data-portfolio-sort="original-order">
+          
+          <ul class="portfolio-flters">
+            <li data-filter="*" class="filter-active">Todos</li>
+            <li data-filter=".filter-rj">Rio de Janeiro - RJ</li>
+            <li data-filter=".filter-pinda">Pindamonhagaba - SP</li>
+          </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-pinda">
               <img src="assets/img/portfolio/icons/1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>App 1</h4>
@@ -428,7 +462,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-product">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-pinda">
               <img src="assets/img/portfolio/icons/2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Product 1</h4>
@@ -437,7 +471,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-branding">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-pinda">
               <img src="assets/img/portfolio/icons/3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Branding 1</h4>
@@ -446,7 +480,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-pinda">
               <img src="assets/img/portfolio/icons/4.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Books 1</h4>
@@ -455,7 +489,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-pinda">
               <img src="assets/img/portfolio/icons/5.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>App 2</h4>
@@ -464,7 +498,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-product">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-pinda">
               <img src="assets/img/portfolio/icons/6.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Product 2</h4>
@@ -473,7 +507,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-branding">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-pinda">
               <img src="assets/img/portfolio/icons/7.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Branding 2</h4>
@@ -482,7 +516,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-pinda">
               <img src="assets/img/portfolio/icons/8.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Books 2</h4>
@@ -491,7 +525,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-pinda">
               <img src="assets/img/portfolio/icons/9.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>App 3</h4>
@@ -500,7 +534,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-product">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-pinda">
               <img src="assets/img/portfolio/icons/10.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Product 3</h4>
@@ -509,16 +543,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-branding">
-              <img src="assets/img/portfolio/icons/11.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Branding 3</h4>
-                <a href="assets/img/portfolio/11.png" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-pinda">
               <img src="assets/img/portfolio/icons/12.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Books 3</h4>
@@ -527,7 +552,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-rj">
               <img src="assets/img/portfolio/icons/25.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Books 3</h4>
@@ -536,7 +561,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-rj">
               <img src="assets/img/portfolio/icons/26.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Books 3</h4>
@@ -545,7 +570,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-rj">
               <img src="assets/img/portfolio/icons/27.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Books 3</h4>
@@ -554,7 +579,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-rj">
               <img src="assets/img/portfolio/icons/28.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Books 3</h4>
@@ -563,7 +588,51 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-          </div><!-- End Portfolio Container -->
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-rj">
+              <img src="assets/img/portfolio/icons/29.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Books 3</h4>
+                <a href="assets/img/portfolio/29.jpeg" title="Branding 3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-rj">
+              <img src="assets/img/portfolio/icons/30.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Books 3</h4>
+                <a href="assets/img/portfolio/30.jpeg" title="Branding 3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-rj">
+              <img src="assets/img/portfolio/icons/31.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Books 3</h4>
+                <a href="assets/img/portfolio/31.jpeg" title="Branding 3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-rj">
+              <img src="assets/img/portfolio/icons/32.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Books 3</h4>
+                <a href="assets/img/portfolio/32.jpeg" title="Branding 3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-rj">
+              <img src="assets/img/portfolio/icons/33.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Books 3</h4>
+                <a href="assets/img/portfolio/33.jpeg" title="Branding 3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+        </div><!-- End Portfolio Container -->
 
         </div>
 
@@ -715,7 +784,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-4 col-sm-12">
             <div class="footer-info">
               <h3>CT Integradas RJ</h3>
               <p>
@@ -727,7 +796,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
+          <div class="col-lg-4 col-md-4 col-sm-12 footer-links">
             <h4>Links úteis</h4>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#home">Home</a></li>
@@ -739,22 +808,13 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-lg-4 col-md-4 col-sm-12 footer-links">
             <h4>Serviços</h4>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#services">Adaptação e desintoxicação</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#services">Conscientização</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#services">Prevenção a recaída</a></li>
             </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
           </div>
 
         </div>
@@ -786,7 +846,7 @@
   </a>
   <!--Botão whatsapp-->
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
+  <!-- DESCOMENTAR-->
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
