--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CT Integradas RJ</title>
+  <title>Integral Serviços e Saúde</title>
   <meta content="Clínica de recuperação e psicologia" name="description">
   <meta content="Psicólogo, Psicologia, Saúde, Psicoterapia, Psicoterapeuta, Drogas, Alcoolismo, Depressão, Saúde mental, Clínica, Recuperação" name="keywords">
 
@@ -46,7 +46,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo-ct.png" class="img-fluid" alt="">
+        <img src="assets/img/logo4.png" class="img-fluid" alt="">
       </a>
 
       <nav id="navbar" class="navbar">
@@ -63,7 +63,7 @@
       </nav><!-- .navbar -->
 
       <a class="btn-getstarted scrollto" href="https://www.doctoralia.com.br/alex-evangelista/psicologo/rio-de-janeiro" target="_blank">
-        <i class="bi bi-display"></i> Falar com o especialista
+        <i class="bi bi-display"></i> Fale com o especialista
       </a>
 
     </div>
@@ -71,8 +71,8 @@
 
   <section id="hero-fullscreen" class="hero-fullscreen d-flex align-items-center">
     <div class="container text-center d-flex flex-column align-items-center position-relative" data-aos="zoom-out">
-      <img src="assets/img/logo-ct.png" style="width: 20%" class="img-fluid" alt="">
-      <h3><strong>CENTRO DE TRATAMENTO PARA DEPENDÊNCIA QUÍMICA INTEGRADAS</strong></h3>
+      <img src="assets/img/logo.png" style="width: 15%" class="img-fluid" alt="">
+      <h3><strong>CENTRO DE TRATAMENTO PARA DEPENDÊNCIA QUÍMICA</strong></h3>
       <p>Restaurando vidas desde 2008</p>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Saiba mais</a>
@@ -132,7 +132,7 @@
 
         <div class="section-header">
           <h2>Quem somos ?</h2>
-          <p align="justify">Hoje a CT Integradas, fundada em 2008 e com mais de 4.000 vidas assistidas aproximadamente até hoje, possui umas das mais modernas e bem estruturada unidade de acolhimento e tratamento para dependentes de álcool e outras drogas. Com 28.000 metros quadrados e 120 leitos. Todos os nossos residentes são acompanhados por equipe multidisciplinar composta por médico psiquiatra, psicólogos especializados em múltiplas abordagens terapêuticas, enfermeiro (a), conselheiros em dependência química, terapeuta ocupacional, educadores físicos, nutricionista, monitores, cozinheiro, administração e diretoria.</p>
+          <p align="justify">Hoje a Integral Serviços e Saúde, fundada em 2008 e com mais de 4.000 vidas assistidas aproximadamente até hoje, possui umas das mais modernas e bem estruturada unidade de acolhimento e tratamento para dependentes de álcool e outras drogas. Com 28.000 metros quadrados e 120 leitos. Todos os nossos residentes são acompanhados por equipe multidisciplinar composta por médico psiquiatra, psicólogos especializados em múltiplas abordagens terapêuticas, enfermeiro (a), conselheiros em dependência química, terapeuta ocupacional, educadores físicos, nutricionista, monitores, cozinheiro, administração e diretoria.</p>
           <h4 class="mt-3"><strong>Missão</strong></h4>
           <p align="justify">Promover o bem-estar emocional e mental através do acolhimento individual e familiar, aplicando recursos psicológicos e terapêuticos, garantindo a qualidade de vida, reinserção social e promoção de saúde individual e familiar.</p>
           <h4 class="mt-3"><strong>Visão</strong></h4>
@@ -872,7 +872,7 @@
 
           <div class="col-lg-6 col-md-4 col-sm-12">
             <div class="footer-info">
-              <h3>CT Integradas RJ</h3>
+              <img src="assets/img/logo2.png" alt="" class="img-fluid w-50" />
               <p>Largo do Machado, 21 - Largo do Machado, Rio de Janeiro / RJ</p>
               <p>Rua Constante Ramos, 44 - Copacabana, Rio de Janeiro / RJ</p><br>
               <p>
@@ -914,7 +914,7 @@
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>CT Integradas RJ</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>Integral Serviços e Saúde</span></strong>. All Rights Reserved
           </div>
         </div>
 
