--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <section id="hero-fullscreen" class="hero-fullscreen d-flex align-items-center">
     <div class="container text-center d-flex flex-column align-items-center position-relative" data-aos="zoom-out">
-      <img src="assets/img/logo.png" style="width: 15%" class="img-fluid" alt="">
+      <img src="assets/img/logo.png" class="img-fluid" alt="">
       <h3><strong>CENTRO DE TRATAMENTO PARA DEPENDÊNCIA QUÍMICA</strong></h3>
       <p>Restaurando vidas desde 2008</p>
       <div class="d-flex">
