--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Integral Serviços e Saúde</title>
+  <title>Centro de Tratamento Integral - Serviços e Saúde</title>
   <meta content="Clínica de recuperação e psicologia" name="description">
   <meta content="Psicólogo, Psicologia, Saúde, Psicoterapia, Psicoterapeuta, Drogas, Alcoolismo, Depressão, Saúde mental, Clínica, Recuperação" name="keywords">
 
@@ -62,7 +62,7 @@
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
 
-      <a class="btn-getstarted scrollto" href="https://www.doctoralia.com.br/alex-evangelista/psicologo/rio-de-janeiro" target="_blank">
+      <a class="btn-getstarted scrollto m-2" href="https://www.doctoralia.com.br/alex-evangelista/psicologo/rio-de-janeiro" target="_blank">
         <i class="bi bi-display"></i> Fale com o especialista
       </a>
 
@@ -72,7 +72,7 @@
   <section id="hero-fullscreen" class="hero-fullscreen d-flex align-items-center">
     <div class="container text-center d-flex flex-column align-items-center position-relative" data-aos="zoom-out">
       <img src="assets/img/logo.png" class="img-fluid" alt="">
-      <h3><strong>CENTRO DE TRATAMENTO PARA DEPENDÊNCIA QUÍMICA</strong></h3>
+      <h3><strong>CENTRO DE TRATAMENTO INTEGRAL</strong></h3>
       <p>Restaurando vidas desde 2008</p>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Saiba mais</a>
@@ -202,7 +202,7 @@
           <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
             <h3><em>Pronto Atendimento</em></h3>
             <p align="justify">Fale com nossa equipe no botão abaixo ou venha até nossa unidade. Atendimentos de Segunda à Sexta das 7h às 20h em Copacabana, Recreio dos Bandeirantes, das 7h às 21h no Largo do Machado e aos Sábado das 7h às 14h.</p>
-            <a class="cta-btn align-self-start" href="https://api.whatsapp.com/send?phone=5521993338842" target="_blank">
+            <a class="cta-btn align-self-start" href="https://api.whatsapp.com/send?phone=5521993337742" target="_blank">
               <i class="bi bi-whatsapp"></i> Inicie um atendimento agora mesmo!
             </a>
           </div>
@@ -823,7 +823,7 @@
                 <i class="bi bi-phone flex-shrink-0"></i>
                 <div>
                   <h4>Telefone:</h4>
-                  <p> (21) 9 9333-8842</p>
+                  <p> (21) 9 9333-7742</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -878,7 +878,7 @@
               <p>
                   Estrada Municipal José Teodoro, 760 - Cruz Pequena<br>
                   Pindamonhagaba - SP - 12400-000<br><br>
-                <strong>Telefone:</strong> (21) 9 9333-8842<br>
+                <strong>Telefone:</strong> (21) 9 9333-7742<br>
                 <strong>Email:</strong> contato@psicologozonasulrj.com.br<br>
               </p>
             </div>
@@ -929,7 +929,7 @@
 
   </footer><!-- End Footer -->
   <!--Botão whatsapp-->
-  <a href="https://api.whatsapp.com/send?phone=5521993338842" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=5521993337742" target="_blank">
       <div class="btn-whatsapp pulsaDelay"><i class="bi bi-whatsapp"></i></div>
   </a>
   <!--Botão whatsapp-->
