--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
 
-      <a class="btn-getstarted scrollto m-2" href="https://www.doctoralia.com.br/alex-evangelista/psicologo/rio-de-janeiro" target="_blank">
+      <a class="btn-getstarted scrollto me-5 ms-5 text-center" href="https://www.doctoralia.com.br/alex-evangelista/psicologo/rio-de-janeiro" target="_blank">
         <i class="bi bi-display"></i> Fale com o especialista
       </a>
 
