--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div class="section-header">
           <h2>Quem somos ?</h2>
-          <p align="justify">Hoje a Integral Serviços e Saúde, fundada em 2008 e com mais de 4.000 vidas assistidas aproximadamente até hoje, possui umas das mais modernas e bem estruturada unidade de acolhimento e tratamento para dependentes de álcool e outras drogas. Com 28.000 metros quadrados e 120 leitos. Todos os nossos residentes são acompanhados por equipe multidisciplinar composta por médico psiquiatra, psicólogos especializados em múltiplas abordagens terapêuticas, enfermeiro (a), conselheiros em dependência química, terapeuta ocupacional, educadores físicos, nutricionista, monitores, cozinheiro, administração e diretoria.</p>
+          <p align="justify">Hoje a CT Integral, fundada em 2008 e com mais de 4.000 vidas assistidas aproximadamente até hoje, possui umas das mais modernas e bem estruturada unidade de acolhimento e tratamento para dependentes de álcool e outras drogas. Com 28.000 metros quadrados e 120 leitos. Todos os nossos residentes são acompanhados por equipe multidisciplinar composta por médico psiquiatra, psicólogos especializados em múltiplas abordagens terapêuticas, enfermeiro (a), conselheiros em dependência química, terapeuta ocupacional, educadores físicos, nutricionista, monitores, cozinheiro, administração e diretoria.</p>
           <h4 class="mt-3"><strong>Missão</strong></h4>
           <p align="justify">Promover o bem-estar emocional e mental através do acolhimento individual e familiar, aplicando recursos psicológicos e terapêuticos, garantindo a qualidade de vida, reinserção social e promoção de saúde individual e familiar.</p>
           <h4 class="mt-3"><strong>Visão</strong></h4>
@@ -815,7 +815,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h4>Email:</h4>
-                  <p>contato@psicologozonasulrj.com.br</p>
+                  <p>ctintegralrj@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -879,7 +879,7 @@
                   Estrada Municipal José Teodoro, 760 - Cruz Pequena<br>
                   Pindamonhagaba - SP - 12400-000<br><br>
                 <strong>Telefone:</strong> (21) 9 9333-7742<br>
-                <strong>Email:</strong> contato@psicologozonasulrj.com.br<br>
+                <strong>Email:</strong> ctintegralrj@gmail.com<br>
               </p>
             </div>
           </div>
