--- a/index.html
+++ b/index.html
@@ -862,7 +862,10 @@
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
-
+    <div class="box-cookies hide">
+        <p class="msg-cookies">Este site usa cookies para garantir que você obtenha a melhor experiência.</p>
+        <button class="btn rounded-0 btn-cookies">Aceitar!</button>
+    </div>
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
 
@@ -938,6 +941,10 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
+  <script
+  src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+  crossorigin="anonymous"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -947,6 +954,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/cookies.js"></script>
 
 </body>
 
