--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <div class="container text-center d-flex flex-column align-items-center position-relative" data-aos="zoom-out">
       <img src="assets/img/logo.png" class="img-fluid" alt="">
       <h3><strong>CENTRO DE TRATAMENTO INTEGRAL</strong></h3>
+	  <p style="font-size: 1.0em" class="text-dark"><strong>Dependencia química e alcoolismo</strong></p>
       <p>Restaurando vidas desde 2008</p>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Saiba mais</a>
@@ -863,8 +864,24 @@
 
   </main><!-- End #main -->
     <div class="box-cookies hide">
-        <p class="msg-cookies">Este site usa cookies para garantir que você obtenha a melhor experiência.</p>
+      <div class="row">
+        <div class="col-xl-8 col-md-4 col-sm-12">
+          <p class="msg-cookies">Este site usa cookies para garantir que você obtenha a melhor experiência.</p>
+        </div>
+        <div class="col-xl-2 col-md-4 col-sm-6 p-0">
+          <button style="background-color:cadetblue !important;
+                          border: 0px !important;
+                          margin-left: 1px !important;" class="rounded-0 w-100 h-100 btn-cookies-accept">Aceitar!</button>
+        </div>
+        <div class="col-xl-2 col-md-4 col-sm-6 p-0">
+          <button style="background-color:cadetblue !important;
+                          border: 0px !important;
+                          margin-left: 1px;" class="rounded-0 w-100 h-100 btn-cookies-reject">Recusar!</button>
+        </div>
+      </div>
+        <!--<p class="msg-cookies">Este site usa cookies para garantir que você obtenha a melhor experiência.</p>
         <button class="btn rounded-0 btn-cookies">Aceitar!</button>
+        <button class="btn rounded-0 btn-cookies">Recusar!</button>-->
     </div>
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
